--- a/src/CoreBundle/Resources/views/Form/fields.html.twig
+++ b/src/CoreBundle/Resources/views/Form/fields.html.twig
@@ -4,7 +4,8 @@
         $(document).ready(
             function () {
                 $("[data-imperavi]").redactor({
-                    plugins: ['customfilemanager']
+                    plugins: ['customfilemanager'],
+                    cleanOnPaste: false
                 })
             }
         );
