iconpicker is seen

--- a/src/CoreBundle/Resources/public/styles/style.scss
+++ b/src/CoreBundle/Resources/public/styles/style.scss
@@ -130,6 +130,12 @@ body {
   #menu-hierarchy {
     margin-bottom: 24px;
   }
+
+  .iconpicker-container {
+    .fade {
+      opacity: 1;
+    }
+  }
 }
 
 //COMPONENTS
