--- a/src/CoreBundle/Resources/views/admin/slider/edit.html.twig
+++ b/src/CoreBundle/Resources/views/admin/slider/edit.html.twig
@@ -7,6 +7,7 @@
 
     {{ form_row(form.name) }}
     {{ form_row(form.display) }}
+    {{ form_row(form.slides) }}
 
     {{ form_row(form.save) }}
 
