Move js at the end of document

--- a/src/CoreBundle/Resources/views/admin/sidebar/edit.html.twig
+++ b/src/CoreBundle/Resources/views/admin/sidebar/edit.html.twig
@@ -16,3 +16,7 @@
     {{ form_end(form) }}
 
 {% endblock %}
+
+{% block javascripts %}
+    {{ include('@RiverwayCmsCore/admin/_widgets_javascripts.html.twig', {owner: 'sidebar'}) }}
+{% endblock %}
