--- a/src/CoreBundle/Resources/views/admin/slider/edit.html.twig
+++ b/src/CoreBundle/Resources/views/admin/slider/edit.html.twig
@@ -30,6 +30,14 @@
                         </div>
                     </div>
                     {{ form_row(slide.header) }}
+                    {{ form_row(slide.subHeader) }}
+                    {{ form_row(slide.description) }}
+                    {{ form_row(slide.button) }}
+                    {{ form_row(slide.textAlign) }}
+                    {{ form_row(slide.verticalAlign) }}
+                    {{ form_row(slide.marginRight) }}
+                    {{ form_row(slide.width) }}
+                    {{ form_row(slide.url) }}
                     {{ form_row(slide.imageUrl) }}
                 </div>
             {% endfor %}
