slider colorselector init

--- a/src/CoreBundle/Resources/public/styles/style.scss
+++ b/src/CoreBundle/Resources/public/styles/style.scss
@@ -5,6 +5,7 @@
 @import 'vendor/imperavi/redactor.css';
 @import "vendor/font-awesome/css/font-awesome.css";
 @import 'mixins';
+@import "vendor/colorselector/colorselector.css";
 
 body {
   .admin-modal .close {
