range with numbers

--- a/src/CoreBundle/Resources/public/styles/style.scss
+++ b/src/CoreBundle/Resources/public/styles/style.scss
@@ -137,6 +137,12 @@ body {
       opacity: 1;
     }
   }
+
+  .range output {
+    vertical-align: top;
+    margin-left: 16px;
+    margin-top: 2px;
+  }
 }
 
 //COMPONENTS
