--- a/src/CoreBundle/Resources/views/admin/slider/edit.html.twig
+++ b/src/CoreBundle/Resources/views/admin/slider/edit.html.twig
@@ -23,7 +23,7 @@
                                     </button>
                                 </div>
                                 <div class="col-12">
-                                    <img id="featured-img-{{ key }}" class="admin-preview"
+                                    <img id="featured-img-{{ key }}"
                                          src="{{ slide.imageUrl.vars.value }}"/>
                                 </div>
                             </div>
