--- a/src/CoreBundle/Resources/views/Form/fields.html.twig
+++ b/src/CoreBundle/Resources/views/Form/fields.html.twig
@@ -46,3 +46,12 @@
 {% block form_label_class -%}
     col-sm-10
 {%- endblock form_label_class %}
+
+{% block range_widget %}
+    {% spaceless %}
+        <div class="range">
+            <input type="range" {{ block('widget_attributes') }} {% if value is defined %} value="{{ value }}"{% endif %}>
+            <output>{{ value }}</output>
+        </div>
+    {% endspaceless %}
+{% endblock %}
