--- a/src/CoreBundle/Resources/public/styles/style.scss
+++ b/src/CoreBundle/Resources/public/styles/style.scss
@@ -143,6 +143,26 @@ body {
     margin-left: 16px;
     margin-top: 2px;
   }
+
+  .slider-preview-img {
+    box-sizing: border-box;
+    display: block;
+    width: 600px;
+    height: 300px;
+    padding: 10px;
+    margin: 0;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+  }
+
+  .slide-preview-header {
+    font-size: 1.8rem;
+  }
+
+  .slide-preview-subheader {
+    font-size: 1.4rem;
+  }
 }
 
 //COMPONENTS
