--- a/src/CoreBundle/Resources/views/Form/fields.html.twig
+++ b/src/CoreBundle/Resources/views/Form/fields.html.twig
@@ -44,8 +44,12 @@
 {% endblock %}
 
 {% block form_label_class -%}
-    col-sm-10
+    col-sm-12
 {%- endblock form_label_class %}
+
+{% block form_group_class -%}
+    col-sm-12
+{%- endblock form_group_class %}
 
 {% block range_widget %}
     {% spaceless %}
