button with bg done

--- a/src/CoreBundle/Resources/public/styles/style.scss
+++ b/src/CoreBundle/Resources/public/styles/style.scss
@@ -163,6 +163,11 @@ body {
   .slide-preview-subheader {
     font-size: 1.4rem;
   }
+
+  .slide-preview-button {
+    border: none;
+    border-radius: 2px;
+  }
 }
 
 //COMPONENTS
